deploy by sh file

--- a/docs/99.关于/01.关于本站.md
+++ b/docs/99.关于/01.关于本站.md
@@ -14,16 +14,16 @@ tags:
 
 ## 目录
 
-- [关于社团](关于社团.md)
-- [曲谱规范](曲谱规范.md)
-- [如何上传](如何上传.md)
+- [关于社团](02.关于社团.md)
+- [曲谱规范](03.曲谱规范.md)
+- [如何上传](04.如何上传.md)
 
 
 ---
 
 ## 更新记录
 
-### 221121
+### 221124
 
 - 在曲谱种添加[Blues](/pages/10c6cb/)板块
 
@@ -43,3 +43,5 @@ tags:
 
 确定了导航栏和侧边栏。
 
+### 221110
+- 网站成功上线
