--- a/docs/02.music/03.Blues/03.Just Keep Loving Her.md
+++ b/docs/02.music/03.Blues/03.Just Keep Loving Her.md
@@ -9,11 +9,12 @@ tags:
   - 
 ---
 # Just Keep Loving Her
+
 Covered by Ivan Marcio
 
->原曲由 Little Walter 所作。这里给的是 Ivan Marcio 的改编致敬版本。Ivan Marcio 设计的节奏比较复杂，可以说是在三连音上面玩出了花。同时，他还使用了大量的重音移位，使得节奏听感丰富。
+> 原曲由 Little Walter 所作。这里给的是 Ivan Marcio 的改编致敬版本。Ivan Marcio 设计的节奏比较复杂，可以说是在三连音上面玩出了花。同时，他还使用了大量的重音移位，使得节奏听感丰富。
 
-演奏视频：
+## 演奏视频
 
 <iframe src="//player.bilibili.com/player.html?aid=22872283&bvid=BV1BW41137wS&cid=38001848&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
@@ -21,5 +22,6 @@ Covered by Ivan Marcio
 
 BV1BW41137wS
 
-# 曲谱
-[Just Keep Loving Her](Just_Keep_Love_Her(Final).pdf)
+## 曲谱
+
+[Just Keep Loving Her](/file/Just_Keep_Love_Her(Final).pdf)
