deploy by sh file

--- a/docs/02.music/03.Blues/02.Juke.md
+++ b/docs/02.music/03.Blues/02.Juke.md
@@ -27,11 +27,13 @@ Kim Wilson 版本：
 值得一提的是，Kim 的在改编漏拍部分时，通过重音移位（重音不在小节的第一拍）的方法，让相应部分的律动感与原曲一致的同时，又“偷偷地”规整了节拍，实在巧妙。不过重音移位也在节奏上增加了难度，大家多听多练吧~
 
 # 曲谱
+
 E调曲目，使用A调口琴二把位演奏。
 
 因为自己水平比较次，一些节奏细节可能把握不是非常准确，或者我不知道该如何准确地在谱面上表示出来。这些部分我用<span style="color:orangered;">红色</span>标注了出来。
 
-[| Little Walter&emsp;版本曲谱](/file/Juke(Little-Walter).pdf)
+[| Little Walter&emsp;版本曲谱](/file/Juke(Little_Walter).pdf)
 
-[| Kim Wilson&emsp;&nbsp;&nbsp;版本曲谱](/file/Juke(cover-by-Kim-Wilson).pdf)
+[| Kim Wilson&emsp;&nbsp;&nbsp;版本曲谱](/file/Juke(cover_by_Kim_Wilson).pdf)
+
 >在扒完谱，准备收集一些 Turn Around （每遍十二小节的最后两小节）的句子的时候，我发现 Juke 当中 “V IV I V” 部分的句子十分丰富，几乎每个小节都不重样。而我在实际演奏中，该部分的乐句比较固化，我认为 LW 演奏 “V IV I V” 非常值得去联系之前的小节细品。
